--- a/app/views/navigation.rhtml
+++ b/app/views/navigation.rhtml
@@ -10,19 +10,11 @@ end
 
 <div class="navigation">
   <% if @action_name != 'published' then %>
-    <%= list_item 'Home Page', {:action => 'show', :id => 'HomePage'}, 'Home, Sweet Home', 'H' %> | 
-    <%= list_item 'All Pages', {:action => 'list'}, 'Alphabetically sorted list of pages', 'A' %> | 
-    <%= list_item 'Recently Revised', {:action =>'recently_revised'}, 'Pages sorted by when they were last changed', 'U' %> |
-    <%= list_item 'Authors', {:action => 'authors'}, 'Who wrote what' %> | 
-    <%= list_item 'Feeds', {:action => 'feeds'}, 'Subscribe to changes by RSS' %> | 
-    <%= list_item 'Export', {:action => 'export'}, 'Download a zip with all the pages in this wiki', 'X' %> |
-    <% form_tag({ :controller => 'wiki', :action => 'search', :web => @web.address},
-                 {'id' => 'navigationSearchForm', 'method' => 'get', 'accept-charset' => 'utf-8' }) do %>
-      <input type="text" id="searchField" name="query" value="Search"
-             onfocus="this.value == 'Search' ? this.value = '' : true"
-             onblur="this.value == '' ? this.value = 'Search' : true" />
-    <% end %>
+    <%= list_item 'Principal', {:action => 'show', :id => 'HomePage'}, 'Home, Sweet Home', 'H' %> | 
+    <%= list_item 'Todas as Páginas', {:action => 'list'}, 'Alphabetically sorted list of pages', 'A' %> | 
+    <%= list_item 'Atualizações', {:action =>'recently_revised'}, 'Pages sorted by when they were last changed', 'U' %> |
+    <%= list_item 'Feeds', {:action => 'feeds'}, 'Subscribe to changes by RSS' %>
   <% else %>
-  	<%= list_item 'Home Page', {:action => 'published', :id => 'HomePage'}, 'Home, Sweet Home', 'H' %> | 
+  	<%= list_item 'Principal', {:action => 'published', :id => 'HomePage'}, 'Home, Sweet Home', 'H' %> | 
   <% end%>
 </div>
