--- a/public/stylesheets/instiki.css
+++ b/public/stylesheets/instiki.css
@@ -1,125 +1,217 @@
 body {
-background-color:#FFF;
-color:#333;
-font-family:Verdana, Arial, Helvetica, sans-serif;
-font-size:90%;
-line-height:1.3em;
+  margin: 10px 0 0 0; padding: 0;
+  background: #fff url(/images/topbluefade.gif) repeat-x;
+  text-align: center;
+}
+
+body, p, ol, ul, td {
+	font-family: verdana, "Lucida Grande", arial, helvetica, sans-serif;
+	color: #333;
 }
 
 #Container {
-float:none;
-margin:0 15%;
-text-align:center;
+	float: none;
+	margin: 0 15%;
+	text-align: center;
 }
 
 #Content {
-border-top:none;
-float:left;
-margin:0;
-padding:0.3em;
-text-align:left;
-width:100%;
+	border-top:none;
+	float:left;
+	margin:0;
+	padding:0.3em;
+	text-align:left;
+	width:100%;
 }
 
-a:visited {
-color:#666;
+/*-------------------------------------------------
+HEADER
+-------------------------------------------------*/
+
+div#Header {
+  text-align: center;
+  margin: 15px 0 10px 0;
 }
 
-h1,h2,h3 {
-color:#333;
-font-family:georgia, verdana, sans-serif;
+div#Header img {
+  float: right;
+  margin: 0 0 0 0;
+  vertical-align: middle;
+  border: none;
 }
 
-h1 {
-font-size:200%;
+div#Header div#Nav img {
+  float:none;
+  margin-right:5px;
 }
 
-h2 {
-font-size:130%;
+div#Header div#Nav {
+  font-size: 10px;
+  color: #999;
 }
 
-h3 {
-font-size:120%;
+div#Header div#Nav a:link,
+div#Header div#Nav a:visited {
+  font-size: 11px;
+  font-weight: bold;
+  color: #000;
 }
+
+div#Header div#Nav a:hover {
+  color: #fff;
+  background:#333;
+}
+
+div#Header div.clearall {
+	margin: 0 0 20px; 0;
+  padding: 0;
+	clear: both;
+	font-size: 2px;
+}
+
+a, a:visited { color: #369; }
+a:hover {
+  background-color:#F4DDA6; 
+}
+
+.newWikiWord { background-color: #eee; }
+.newWikiWord a:hover { background-color: white; }
+
+h1, h2, h3 { color: #333; font-family: georgia, verdana, sans-serif; }
+h1 { font-size: 28px }
+h2 { font-size: 19px }
+h3 { font-size: 16px }
 
 h1#pageName {
-line-height:1em;
-margin:0.2em 0 0;
-padding:0;
+  color:#000;
+  margin: 5px 0 0;
+  padding: 0;
+  line-height: 28px;
+  position:relative;
 }
 
 h1#pageName small {
-color:#444;
-font-size:35%;
-line-height:1em;
-padding:0;
+  color: #444;
+  line-height: 10px;
+  font-size: 10px;
+  padding: 0;
+  position:absolute;
+  top:-15px; left:0;
+}
+
+h1#pageName br {
+  display:none;
+}
+
+#i2Nav {
+  margin:40px 0 15px 0;
+}
+
+* html #i2Nav { /* ie does not support min-height */
+  height:112px;
+}
+
+a.nav, a.nav:link, a.nav:visited { color: #000; }
+a.nav:hover { color: #fff; background-color:#000; }
+
+
+
+
+/*h1,h2,h3 {
+	color:#333;
+	font-family:georgia, verdana, sans-serif;
+}
+
+h1 {
+	font-size:200%;
+}
+
+h2 {
+	font-size:130%;
+}
+
+h3 {
+	font-size:120%;
+}
+
+h1#pageName {
+	line-height:1em;
+	margin:0.2em 0 0;
+	padding:0;
+}
+
+h1#pageName small {
+	color:#444;
+	font-size:35%;
+	line-height:1em;
+	padding:0;
 }
 
 a.nav,a.nav:link,a.nav:visited {
-background-color:#FFF;
-color:#000;
-}
+	background-color:#FFF;
+	color:#000;
+}*/
 
-table {
-border:double #000;
-border-collapse:collapse;
+/*table {
+	border:double #000;
+	border-collapse:collapse;
 }
 
 td {
-border:thin solid #888;
+	border:thin solid #888;
 }
 
 li {
-margin-bottom:0.5em;
+	margin-bottom:0.5em;
 }
 
 .newWikiWord {
-background-color:#DDD;
+	background-color:#DDD;
 }
 
 .newWikiWord a:hover {
-background-color:#FFF;
+	background-color:#FFF;
 }
 
 form#navigationSearchForm {
-display:inline;
+	display:inline;
 }
 
 form#navigationSearchForm input {
-font-size:80%;
+	font-size:80%;
 }
 
 .navigation {
-color:#999;
-font-size:90%;
-margin-top:0.3em;
+	color:#999;
+	font-size:90%;
+	margin-top:0.3em;
 }
 
 .navigation a:hover {
-background-color:#000;
-color:#FFF;
-text-decoration:none;
+	background-color:#000;
+	color:#FFF;
+	text-decoration:none;
 }
 
 .navigation a {
-color:#000;
-font-weight:bold;
+	color:#000;
+	font-weight:bold;
 }
 
 .navigation small a {
-font-size:90%;
-font-weight:normal;
+	font-size:90%;
+	font-weight:normal;
 }
 
 .navOn {
-color:#444;
-font-weight:bold;
-text-decoration:none;
+	color:#444;
+	font-weight:bold;
+	text-decoration:none;
 }
 
 div.help {
-font-family:verdana, arial, helvetica, sans-serif;
-font-size:70%;
+	font-family:verdana, arial, helvetica, sans-serif;
+	font-size:70%;
 }
 
 div.inputBox {
@@ -139,9 +231,9 @@ margin:0 0 1.5em;
 padding:0 2.5em;
 }
 
-
+*/
 /* Affects the display of "category: ..." */
-.property { 
+/*.property { 
 color: #999; 
 font-size: 80%; 
 }
@@ -239,26 +331,9 @@ margin-top:0.5em;
 padding:0.5em;
 width:100%;
 }
+*/
 
-div#editFormButtons {
-margin:0.5em 0 0;
-}
-
-div#editFormButtons span {
-white-space:nowrap;
-}
-
-div#editForm {
-float:left;
-width:65%;
-}
-
-div#editForm textarea#content {
-height:400px;
-width:97%;
-}
-
-div#MarkupHelp {
+/*div#MarkupHelp {
 float:right;
 width:34%;
 }
@@ -333,7 +408,7 @@ border:none;
 margin:0;
 padding:0;
 }
-
+*/
 /* .disableAutoComplete {
 display: none; 
 margin-top: 10px; 
@@ -341,3 +416,234 @@ margin-bottom: 5px;
 width: 99%; 
 height: 200px	
 } */
+
+div#editFormButtons {
+margin:0.5em 0 0;
+}
+
+div#editFormButtons span {
+white-space:nowrap;
+}
+
+div#editForm {
+float:left;
+width:65%;
+}
+
+div#editForm textarea#content {
+height:400px;
+width:97%;
+}
+
+
+li { margin-bottom: 7px }
+
+.navigation {
+  margin-top: 5px;
+  font-size : 12px;
+  color: #999;
+}
+
+.navigation a:hover { color: #fff; background-color:#000; }
+
+.navigation a {
+  font-size: 11px;
+  color: black;
+  font-weight: bold;
+}
+
+.navigation small a {
+  font-weight: normal;
+  font-size: 11px;
+}
+  
+.navOn{
+  font-size: 11px;
+  color: #444;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.help {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 11px;
+}
+
+.inputBox {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 11px;
+  background-color: #eee;
+  padding: 5px;
+  margin-bottom: 20px;
+}
+
+blockquote {
+  display: block;
+  margin: 0px 0px 20px 0px;
+  padding: 0px 30px;
+  font-size:11px;
+  line-height:17px;
+  font-style: italic;  
+}
+
+pre {
+  background-color: #eee;
+  padding: 10px;
+  font-size: 11px;
+  overflow: auto;
+}
+
+ol.setup {
+  font-size: 19px;
+  font-family: georgia, verdana, sans-serif;
+  padding-left: 25px;
+}
+
+ol.setup li {
+  margin-bottom: 20px
+}
+
+.byline {
+  font-size: 10px;
+  font-style: italic;  
+  margin-bottom: 10px;
+  color: #999;
+}
+
+.references {
+  font-size: 10px;
+}
+
+.diffdel, del.diffmod {
+  background: pink;
+}
+
+.diffins, ins.diffmod {
+  background: lightgreen;
+}
+
+#footer {
+  height: 14px;
+  padding: .25em 0;
+}
+
+#footer p {
+  font-size: 10px;
+  color: gray;
+  font-style: italic;
+  margin: 0;
+  float: right;
+  text-align: right;
+}
+
+#error {
+  color: #8b0000;
+  font-style: italic;
+  width: 600px;
+}
+
+#info {
+  color: #006400;
+  font-style: italic;
+  width: 600px;
+}
+
+#TextileHelp table {
+  margin-bottom: 0;
+}
+
+#TextileHelp table+h3 {
+  margin-top: 11px;
+}
+
+#TextileHelp table td {
+  font-size: 11px;
+  padding: 3px;
+  vertical-align: top;
+  border-top: 1px dotted #ccc;
+}
+
+#TextileHelp table td.arrow {
+  padding-right: 5px;
+  padding-left: 10px;
+  color: #999;
+}
+
+#TextileHelp table td.label {
+  font-weight: bold;
+  white-space: nowrap;
+  font-size: 10px;
+  padding-right: 15px;
+  color: #000;
+}
+
+#TextileHelp h3 {
+  font-size: 11px;
+  font-weight: bold;
+  font-weight: normal;
+  margin: 0 0 5px 0;
+  padding: 5px 0 0 0;
+}
+
+#TextileHelp p {
+  font-size: 10px;
+}
+
+#editForm {
+  margin-right:-255px;
+  float:left;
+}
+
+#version_body {
+  width: 400px; height: 500px
+}
+
+#MarkupHelp {
+  float: right;
+  width: 250px; 
+  margin-top: 5px;
+  font-size: 12px;
+}
+ 
+.newsList {
+  margin-top: 20px;
+}
+
+.newsList p {
+  margin-bottom:30px
+}
+
+td {border:thin solid grey;}
+table {
+   border:  double black;
+   border-collapse: collapse;
+}
+
+.byline {
+  padding-top: 15px;
+}
+
+/* Affects the display of "category: ..." */
+/*.property {
+  color: grey;
+  font-size: 10px;
+}
+*/
+/* my float clearing technique is unstoppable */
+.c:after {
+    content: "."; 
+    display: block; 
+    height: 0; 
+    clear: both; 
+    visibility: hidden;
+}
+
+.c {display: inline-table;}
+
+/* Hides from IE-mac \*/
+* html .c {height: 1%;}
+.c {display: block;}
+/* End hide from IE-mac */
+
+.content { padding: 5px; border: 1px solid #CFEDF5; background: url('/images/topbluefade.gif') repeat-x; margin-top: 0; }
+table.presentation { background-color: #FFFAE7; border: 1px solid #F7E69D; border-left: none; border-right: none; width: 100%; padding: 10px; }
